Replaced akka-sbt-plugin with sbt-native-packager.